<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HandsetTheftActivity!</string>
    <string name="app_name">HandsetTheft</string>
     <string name="Enter_Password">Enter Password</string>
    <string name="confirm_Password">Confirm Password</string>
    <string name="Econfirm_Password">Conform password</string>
    <string name="ok">OK</string>
    <string name="Password">PASSWORD</string>
    <string name="Active">Active</string>
    <string name="Deactive">Deactive</string>
    <string name="configure">Configure</string>
    <string name="changepassword">Change Password</string>
     <string name="mail">Mail id</string>
     <string name="Email">Enter Mail id</string>
     <string name="Emobile">Enter Mobile Number</string>
      <string name="mobile">Mobile Number</string>
       <string name="message">Message:</string>
        <string name="Emessage">Enter Message:</string>
        <string name="save">Save</string>
         <string name="oldpswd">Old Password</string>
         <string name="newpswd">New Password</string>
         <string name="Eoldpswd">Enter Old Password</string>
          <string name="Enewpswd">Enter new Password</string>
           <string name="cancel">Cancel</string>
           <string name="add">+</string>
         
</resources>