<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F89A1"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:onClick="changepswd"
        android:text="@string/changepassword" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:checked="false"
        android:onClick="activate"
        android:textOff="@string/Deactive"
        android:textOn="@string/Active" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/toggleButton1"
        android:layout_marginBottom="22dp"
        android:onClick="conf"
        android:text="@string/configure" />

</RelativeLayout>