<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F89A1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tv2"
        android:layout_gravity="left"
        android:text="@string/Enter_Password"
        android:textColor="#000203"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/newpass_etpass"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:inputType="textPassword"
        android:hint="@string/Enter_Password" 
        /> <requestFocus />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newpass_etpass"
        android:text="@string/confirm_Password"
        android:textColor="#000203"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/newpass_etrepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tv2"
        android:layout_below="@+id/tv2"
        android:hint="@string/Econfirm_Password"
        android:inputType="textPassword" >
       
    </EditText>

    <Button
        android:id="@+id/newpass_bok"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/newpass_etrepass"
        android:layout_below="@+id/newpass_etrepass"
        android:layout_marginRight="57dp"
        android:layout_marginTop="23dp"
        android:onClick="ok"
        android:text="@string/ok"
        android:textColor="#000203" />

</RelativeLayout>